--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -3,3 +3,10 @@
 
 // Base
 @import "base/_normalize.scss";
+@import "base/_global-variables.scss";
+@import "base/_typography.scss";
+@import "base/_layout.scss";
+
+// Components
+@import "components/_site-header.scss";
+@import "components/_cards.scss";
