APOD page working and README created

--- a/assets/styles/sass/base/_global-variables.scss
+++ b/assets/styles/sass/base/_global-variables.scss
@@ -4,8 +4,11 @@
 $orange: #F9690E;
 $blue: #03A1FF;
 $dark: #333;
+$grey: #DCDCDC;
 
+// Semantic
 $main-color: $orange;
+$disabled-color: $grey;
 
 // LAYOUT
 // =============================
