--- a/assets/styles/sass/components/_cards.scss
+++ b/assets/styles/sass/components/_cards.scss
@@ -13,7 +13,8 @@
 
 .link-card {
 	height: 100%;
-	border-top: 4px solid lighten($blue, 25%);
+	// border-top: 4px solid lighten($blue, 25%);
+	border-top: 4px solid lighten($main-color, 15%);
 	padding: 0 $base-line-height;
 	background-color: #EEE;
 	color: $txt-color;
@@ -21,7 +22,8 @@
 	box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.1);
 
 	&:hover {
-		border-top-color: $blue;
+		// border-top-color: $blue;
+		border-top-color: $main-color;
 	}
 
 	h2 {
