--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -10,3 +10,6 @@
 // Components
 @import "components/_site-header.scss";
 @import "components/_cards.scss";
+
+// Elements
+@import "elements/_buttons.scss";
