Small fixes for beta

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -17,7 +17,7 @@
 			<a ui-sref="rover">
 				<section class="link-card">
 					<h2>Rover</h2>
-					<p>Pictures taken by Mars Rovers Curiosity, Opportunity and Spirit.
+					<p>Various pictures taken by Mars Rovers Curiosity, Opportunity and Spirit.
 				</section>
 			</a>
 		</div>
@@ -25,10 +25,9 @@
 			<a ui-sref="foaas">
 				<section class="link-card">
 					<h2>FOAAS</h2>
-					<p>Found this a while ago and I've been looking for somewhere to use it. Well, here it is.</p>
+					<p>Once upon a time I stumbled upon this fun little API and now you get to enjoy it too.</p>
 				</section>
 			</a>
 		</div>
 	</div>
-
 </main>
